@@ -455,8 +455,8 @@ href="http://mail.gnu.org/archive/html/lilypond-user/">http://mail.gnu.org/archi
 <p>
   We will definitely read your request and think about it, but we set
   our own priorities for implementing features.  If you want us to
-  give more attention to your request, <a
-  href="doneet.html">donate</a> to development.  
+  give more attention to your request, you can  <a
+  href="../sponsor">sponsor development.</a>  
 </p>
 
 <h3>But it is very easy, just extend the syntax like this...</h3>
