@@ -7,10 +7,9 @@
     When revising a translation, copy the CVS Revision number from the
     original source file.  !-->
 
-<title>LilyPond - on Cygwin under Microsoft Windows</title>
+<title>LilyPond - on Cygwin</title>
 
-<h1>LilyPond on Cygwin under Microsoft Windows</h1>
-
+<h1>LilyPond on Cygwin</h1>
 
 <a name="installing"></a>
 <h2>Installing</h2>
