@@ -1,3 +1,7 @@
+2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/about/faq.html (href): link to sponsor, not donate
+
 2005-11-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/news.ihtml (href): Remove stray end comment marker.
